<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_crops"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/dp25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_light_gray_c10dp"
                android:entries="@array/users"
                android:foregroundTint="@color/black"
                android:paddingVertical="@dimen/dp2"
                android:popupBackground="@drawable/rect_light_gray_c10dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/rect_light_gray_c10dp"
            android:hint="@string/phone"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGray"
            android:textCursorDrawable="@drawable/line_cursor_black"
            android:textSize="@dimen/sp15" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/rect_light_gray_c10dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGray"
            android:textCursorDrawable="@drawable/line_cursor_black"
            android:textSize="@dimen/sp15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp25"
            android:background="@drawable/rect_black_c10dp"
            android:stateListAnimator="@null"
            android:text="@string/continueNow"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp5"
            android:padding="@dimen/dp10"
            android:text="@string/noAccount"
            android:textColor="@color/red"
            android:textSize="@dimen/sp15" />

    </LinearLayout>

</LinearLayout>