<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/dp10"
            android:rotation="-90"
            android:src="@android:drawable/arrow_up_float"
            android:tint="@color/black" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp5"
            android:text="@string/addProduct"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp25"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/rect_light_gray_c10dp"
                android:gravity="start|center_vertical"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:paddingStart="@dimen/dp20"
                android:paddingEnd="@dimen/dp20"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                android:textCursorDrawable="@drawable/line_cursor_black"
                android:textSize="@dimen/sp15" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/rect_light_gray_c10dp"
                android:gravity="start"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:paddingHorizontal="@dimen/dp20"
                android:paddingVertical="@dimen/dp12"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                android:textCursorDrawable="@drawable/line_cursor_black"
                android:textSize="@dimen/sp15" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/rect_light_gray_c10dp"
                android:gravity="start|center_vertical"
                android:hint="@string/price"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="@dimen/dp20"
                android:paddingVertical="@dimen/dp12"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                android:textCursorDrawable="@drawable/line_cursor_black"
                android:textSize="@dimen/sp15" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp25"
        android:background="@drawable/rect_black_c10dp"
        android:stateListAnimator="@null"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15" />

</LinearLayout>